<resources>

    <string name="app_name">Scribble</string>

    <!-- Ongoing Worries Page -->
    <string name="ongoing_page_title">ongoing worries</string>
    <string name="ongoing_page_subtitle">You have %1$s ongoing worries</string>
    <string name="ongoing_page_subtitle_1_worry">You have 1 ongoing worry</string>
    <string name="no_worries_prompt">Add a worry to get started</string>
    <string name="no_ongoing_worries_text">Congrats, zen master</string>

    <!-- Finished Worries Page-->
    <string name="finished_page_title">finished worries</string>
    <string name="finished_page_subtitle">You have %1$s finished worries</string>
    <string name="finished_page_subtitle_1_worry">You have 1 finished worry</string>
    <string name="no_finished_worries_text">Finished worries appear here</string>

    <!-- Bottom Navigation Bar -->
    <string name="ongoing_worries_nav_title">Ongoing Worries</string>
    <string name="finished_worries_nav_title">Finished Worries</string>
    <string name="add_worry_nav_title">Add Worry</string>

    <!-- Distortions Page -->
    <string name="distortions_page_title">Add Distortions</string>
    <string name="back_arrow_description">Back Arrow</string>
    <string name="cognitive_distortion_name_template">template</string>

    <!-- Cognitive Distortions -->
    <string name="Distortion1Name">Overgeneralizing</string>
    <string name="Distortion1Description">Believing a single negative event represents a pattern
        and drawing overly broad conclusions</string>
    <string name="Distortion2Name">Mind Reading</string>
    <string name="Distortion2Description">Assuming you know what others are thinking</string>
    <string name="Distortion3Name">Fortune Telling</string>
    <string name="Distortion3Description">Predicting bad things will happen without any real
        evidence</string>
    <string name="Distortion4Name">Catastrophizing</string>
    <string name="Distortion4Description">Viewing small problems as much more serious than they
        truly are</string>
    <string name="Distortion5Name">All-or-Nothing Thinking</string>
    <string name="Distortion5Description">Viewing situations only as good or bad, with no middle
        ground</string>
    <string name="Distortion6Name">Negative Mental Filtering</string>
    <string name="Distortion6Description">Focusing only on the negative parts of a situation, while
        disregarding the positive</string>
    <string name="Distortion7Name">Disqualifying the Positive</string>
    <string name="Distortion7Description">Dismissing or ignoring positive experiences, feedback, or
        accomplishments</string>
    <string name="Distortion8Name">Personalization</string>
    <string name="Distortion8Description">Blaming yourself for events or outcomes that are out of your
        control</string>
    <string name="Distortion9Name">Emotional Reasoning</string>
    <string name="Distortion9Description">Assuming how you feel reflects reality</string>
    <string name="Distortion10Name">Labelling</string>
    <string name="Distortion10Description">Assigning labels to yourself or others</string>
    <string name="worry_1_description">worry icon</string>

    <!-- Formatted Cognitive Distortions Labels -->
    <string name="Distortion5NameFormatted">All/Nothing\nThinking</string>
    <string name="Distortion6NameFormatted">Negative\nFiltering</string>
    <string name="Distortion7NameFormatted">Disqualifying\nthe Positive</string>
    <string name="Distortion9NameFormatted">Emotional\nReasoning</string>

    <!-- Distortions Info Page -->
    <string name="CD_info_1">Cognitive distortions are negative thought patterns that lead to worry.</string>
    <string name="CD_info_2">Recognizing these distortions can help you to see situations more clearly and manage your worries more effectively.</string>

    <!-- New Worry Page -->
    <string name="new_worry_page_title">New Worry</string>
    <string name="new_worry_instruction_1">Give your worry a name</string>
    <string name="new_worry_instruction_1_hint_1">ex. Math Test</string>
    <string name="new_worry_instruction_1_hint_2">ex. My health</string>
    <string name="new_worry_instruction_1_hint_3">ex. Finances</string>
    <string name="new_worry_instruction_1_hint_4">ex. Work performance</string>

    <string-array name="new_worry_instruction_1_hints">
        <item>@string/new_worry_instruction_1_hint_1</item>
        <item>@string/new_worry_instruction_1_hint_2</item>
        <item>@string/new_worry_instruction_1_hint_3</item>
        <item>@string/new_worry_instruction_1_hint_4</item>
    </string-array>

    <string name="no_name_entered_warning_text">Please enter a name</string>
    <string name="new_worry_instruction_2">Describe your worry</string>
    <string name="new_worry_instruction_2_hint">I\'m worried that…</string>
    <string name="new_worry_button_text">Next</string>
    <string name="new_worry_distortions_prompt">Is this a distorted thought?</string>
    <string name="add_distortion_button_label">Add distortions</string>
    <string name="worry_created_message_1">Worry created</string>
    <string name="worry_created_message_2">Now,\nLet it go</string>
    <string name="worry_finished_button">Finish</string>
    <string name="worry_saved_toast">"Worry saved</string>

    <!-- Reminders -->
    <string name="reminder_1">All worries come to an end</string>
    <string name="reminder_2">\"Worrying does not take away tomorrow\'s troubles. It takes away today\'s peace\" - Randy Armstrong</string>
    <string name="reminder_3">\"Never let the future disturb you. You will meet it, if you have to, with the same weapons of reason which today arm you against the present.\" - Marcus Aurelius</string>
    <string name="reminder_4">\"If the problem can be solved why worry? If the problem cannot be solved worrying will do you no good.\" - Shantideva</string>
    <string name="reminder_5">\"Trust yourself. You’ve survived a lot, and you\’ll survive whatever is coming.\" - Robert Tew</string>
    <string name="reminder_6">\"Life Is Like Riding a Bicycle. To Keep Your Balance You Must Keep Moving.\" - Albert Einstein</string>
    <string name="reminder_7">\"Doing the best at this moment puts you in the best place for the next moment.\" - Oprah Winfrey</string>
    <string name="reminder_8">\"Let fear be a counselor and not a jailer\" - Tony Robbins</string>
    <string name="reminder_9">\"You don\'t have to control your thoughts. You just have to stop letting them control you.\" - Dan Millman</string>
    <string name="reminder_10">\"Do not fight your negative emotions. Observe and befriend them.\" - Haemin Smith</string>
    <string name="reminder_11">\"Talk to yourself like you would to someone you love\" - Brené Brown</string>
    <string name="reminder_12">\"Rule No. 1 is, don\'t sweat the small stuff. Rule No. 2 is, it\'s all small stuff.\" - Robert Eliot</string>
    <string name="reminder_13">\"Instead of worrying about what you cannot control, shift your energy to what you can create\" - Roy T. Bennett</string>
    <string name="reminder_14">\"Everything you want is on the other side of fear\" - Jack Canfield</string>
    <string name="reminder_15">\"Breathe, darling. This is just a chapter. It\'s not your whole story.\" - S.C. Lourie</string>
    <string name="reminder_16">\"A problem is a chance for you to do your best.\" - Duke Ellington</string>
    <string name="reminder_17">\"Almost everything will work again if you unplug it for a few minutes, including you.\" - Anne Lamott</string>
    <string name="reminder_18">\"Nothing can bring you peace but yourself.\" - Ralph Waldo Emerson</string>
    <string name="reminder_19">\"Your mind will answer most questions if you learn to relax and wait for the answer.\" - William S. Burroughs</string>
    <string name="reminder_20">\"Remember, today is the tomorrow you worried about yesterday.\" - Dale Carnegie</string>
    <string name="reminder_21">\"The time to relax is when you don\'t have time for it\" - Sydney J. Harris</string>

    <string-array name="reminders">
        <item>@string/reminder_1</item>
        <item>@string/reminder_2</item>
        <item>@string/reminder_3</item>
        <item>@string/reminder_4</item>
        <item>@string/reminder_5</item>
        <item>@string/reminder_6</item>
        <item>@string/reminder_7</item>
        <item>@string/reminder_8</item>
        <item>@string/reminder_9</item>
        <item>@string/reminder_10</item>
        <item>@string/reminder_11</item>
        <item>@string/reminder_12</item>
        <item>@string/reminder_13</item>
        <item>@string/reminder_14</item>
        <item>@string/reminder_15</item>
        <item>@string/reminder_16</item>
        <item>@string/reminder_17</item>
        <item>@string/reminder_18</item>
        <item>@string/reminder_19</item>
        <item>@string/reminder_20</item>
        <item>@string/reminder_21</item>
    </string-array>

    <!-- Delete Worry Fragment-->
    <string name="delete_worry_prompt">Delete this worry?</string>
    <string name="delete_button_text">Delete</string>
    <string name="cancel_delete_button_text">Cancel</string>
    <string name="worry_deleted_toast_text">Worry Deleted</string>

    <!-- Respond to worry-->
    <string name="respond_page_title">Respond</string>
    <string name="respond_prompt">What do you want to tell this worry?</string>
    <string name="response_saved_text">Response Saved</string>

    <!-- Finish worry fragments-->
    <string name="finish_worry_title">Finish Worry</string>
    <string name="no_button_text">No</string>
    <string name="yes_button_text">Yes</string>
    <string name="finish_worry_question">Was it as bad as you feared?</string>
    <string name="finish_worry_prompt_2">How did it end?</string>
    <string name="worry_ended_message_1">Yay!</string>
    <string name="worry_ended_subtitle_1">This worry is over</string>
    <string name="worry_ended_message_2">Phew,</string>
    <string name="worry_ended_subtitle_2">This worry wasn\'t so\nscary after all</string>
    <string name="close_button_text">Close</string>

    <!-- Worry fragment-->
    <string name="better_than_expected_badge_text">This worry went better than expected!</string>
    <string name="how_it_ended_label">How It Ended</string>
    <string name="description_label">Description</string>
    <string name="options_title">Actions</string>
    <string name="finish_worry_button_text">Finish Worry</string>
    <string name="worry_respond_button_text">Respond</string>
    <string name="cognitive_distortions_label">Cognitive Distortions</string>
    <string name="reminders_label">Reminders</string>
    <string name="end_worry_button_text">Finish Worry</string>

    <!-- Worry fragment template-->
    <string name="worry_name_template">Worry Name</string>
    <string name="worry_description_placeholder">description</string>

    <!-- Buttons-->
    <string name="submit_button_text">Submit</string>
    <string name="skip_button_text">Skip</string>

    <!-- Content descriptions-->
    <string name="left_scribble_content_description">scribble design coming from the left of the screen\n</string>
    <string name="exit_button_content_description">Exit button</string>
    <string name="i_button_content_description">Information button</string>
    <string name="add_distortion_button_content_description">Add distortion button</string>
    <string name="next_reminder_button_content_description">Next reminder button</string>
    <string name="previous_reminder_button_content_description">Previous reminder</string>
</resources>