<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.scribble.EndWorryFragment1">

    <TextView
        android:id="@+id/respondTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/karla_bold"
        android:text="@string/finish_worry_title"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_title"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respondTitle">

        <ImageView
            android:id="@+id/scribble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/vector_scribble_1" />

        <ImageView
            android:id="@+id/worryCharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/worry_1" />
    </FrameLayout>

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/karla_bold"
        android:text="@string/finish_worry_question"
        android:textColor="@color/grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/yesButton"
        style="@style/OutlineButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rectangle_rounded_outline_white"
        android:gravity="center_horizontal"
        android:stateListAnimator="@anim/nav_default_enter_anim"
        android:text="@string/yes_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColorLink="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/noButton"
        style="@style/OutlineButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rectangle_rounded_outline_white"
        android:gravity="center_horizontal"
        android:stateListAnimator="@anim/nav_default_enter_anim"
        android:text="@string/no_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColorLink="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yesButton" />

</androidx.constraintlayout.widget.ConstraintLayout>