<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.scribble.NewWorryFragment3">

    <TextView
        android:id="@+id/respondTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/karla_bold"
        android:text="@string/new_worry_page_title"
        android:textAlignment="center"
        android:textColor="@color/darkBlueMain"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respondTitle"
        app:layout_constraintVertical_bias="0.15">

        <ImageView
            android:id="@+id/scribble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/vector_scribble_1" />

        <ImageView
            android:id="@+id/worryCharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/worry_1" />
    </FrameLayout>

    <TextView
        android:id="@+id/respond_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/karla_bold"
        android:text="@string/new_worry_distortions_prompt"
        android:textColor="@color/darkBlueMain"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addDistortionLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respond_prompt">

        <ImageView
            android:id="@+id/add_distortion_Button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:src="@drawable/vector_plus_sign"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/addDistortionLayout"
            app:tint="@color/lightGrey" />

        <GridLayout
            android:id="@+id/distortionsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:animateLayoutChanges="true"
            android:columnCount="4"
            android:gravity="start"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@id/add_distortion_Button"
            app:layout_constraintTop_toTopOf="@+id/addDistortionLayout" />

        <TextView
            android:id="@+id/add_distortion_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/add_distortion_button_label"
            android:textAppearance="@style/Subtext"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/add_distortion_Button"
            app:layout_constraintStart_toEndOf="@id/add_distortion_Button"
            app:layout_constraintTop_toTopOf="@+id/add_distortion_Button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_button"
        style="@style/BlueButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/new_worry_button_text"
        android:textAppearance="@style/BlueButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>