<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="com.example.scribble.fragments.NewWorryFinishedFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newWorryTitle">

            <TextView
                android:id="@+id/respondTitle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/karla_bold"
                android:text="@string/new_worry_page_title"
                android:textAlignment="center"
                android:textColor="@color/darkBlueMain"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <FrameLayout
                android:id="@+id/worryImageLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/respondTitle">

                <ImageView
                    android:id="@+id/scribble"
                    style="@style/scribbleImage"
                    android:layout_gravity="center"
                    android:importantForAccessibility="no"
                    app:tint="@color/lightBlue2" />

                <ImageView
                    android:id="@+id/worryCharacter"
                    android:layout_width="@dimen/worry_size"
                    android:layout_height="@dimen/worry_size"
                    android:layout_gravity="center"
                    android:importantForAccessibility="no"
                    android:src="@drawable/worry_1_blu" />
            </FrameLayout>


            <TextView
                android:id="@+id/worryOverMessage1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rectangle_rounded_15dp"
                android:fontFamily="@font/karla_bold"
                android:gravity="center_horizontal"
                android:paddingStart="15dp"
                android:paddingTop="8dp"
                android:paddingEnd="15dp"
                android:paddingBottom="8dp"
                android:text="@string/worry_created_message_1"
                android:textColor="@color/darkBlueMain"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/worryImageLayout" />


            <TextView
                android:id="@+id/worryOverMessage2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/karla_bold"
                android:gravity="center_horizontal"
                android:text="@string/worry_created_message_2"
                android:textColor="@color/darkBlueMain"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/worryOverMessage1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/finish_button"
        style="@style/OutlineButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/worry_finished_button"
        android:textAppearance="@style/BlueButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>