<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.scribble.fragments.EndWorryFragment2">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newWorryTitle">

            <TextView
                android:id="@+id/endWorryPageTitle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/karla_bold"
                android:text="@string/finish_worry_title"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/skipButton"
                style="@style/Subtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:text="@string/skip_button_text"
                android:textAppearance="@style/Subtext"
                app:layout_constraintBottom_toBottomOf="@id/endWorryPageTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/endWorryPageTitle" />

            <FrameLayout
                android:id="@+id/worryImageLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/endWorryPageTitle">

                <ImageView
                    android:id="@+id/scribble"
                    style="@style/scribbleImage"
                    android:layout_gravity="center"
                    android:importantForAccessibility="no"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/worryCharacter"
                    android:layout_width="@dimen/worry_size"
                    android:layout_height="@dimen/worry_size"
                    android:layout_gravity="center"
                    android:importantForAccessibility="no"
                    android:src="@drawable/worry_1_blu" />
            </FrameLayout>

            <TextView
                android:id="@+id/instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:fontFamily="@font/karla_bold"
                android:text="@string/finish_worry_prompt_2"
                android:textColor="@color/grey"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/worryImageLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/TextInputLayout"
                android:layout_marginTop="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="150"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instruction">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputField"
                    style="@style/LargeTextInputEditText"
                    android:gravity="top"
                    android:maxLength="150" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/finishWorryButton"
        style="@style/BlueButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/end_worry_button_text"
        android:textAppearance="@style/BlueButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>